cleanup javadoc and create output to doc/javadoc/