@@ -7,105 +7,103 @@
 //*4567890123456 (71-character line to adjust editor window) 23456789*/
 
 /*
- *  ProofWorksheet.java  0.10 11/01/2011
- *  <code>
- *  Version 0.02:
- *      - See extended "Derive" Feature notes below
- *      - update misc. comments
- *      - add new ProofWorksheet fields to support "Derive" feature:
- *            int   greatestStepNbr;
- *            int   greatestDummy VarNbr;
+ * ProofWorksheet.java  0.10 11/01/2011
+ * <code>
+ * Version 0.02:
+ *     - See extended "Derive" Feature notes below
+ *     - update misc. comments
+ *     - add new ProofWorksheet fields to support "Derive" feature:
+ *           int   greatestStepNbr;
+ *           int   greatestDummy VarNbr;
  *
- *      - add new ProofStepStmt fields to support "Derive" feature:
- *            boolean generatedByDeriveFeature;
+ *     - add new ProofStepStmt fields to support "Derive" feature:
+ *           boolean generatedByDeriveFeature;
  *
- *      - add new DerivationStep fields to support "Derive" feature:
- *            boolean deriveStepFormula;
- *            boolean deriveStepHyps;
- *            int     nbrMissingHyps;
+ *     - add new DerivationStep fields to support "Derive" feature:
+ *           boolean deriveStepFormula;
+ *           boolean deriveStepHyps;
+ *           int     nbrMissingHyps;
  *
- *      - added new helper routines for ProofUnifier
- *            - generateNewGreatestDummy VarNbr()
- *            - generateNewDerivedStepNbr()
- *            - loadGeneratedFormulaIntoDerivStep()
- *            - findMatchingStepFormula()
- *            - addDerivStepForDeriveFeature()
+ *     - added new helper routines for ProofUnifier
+ *           - generateNewGreatestDummy VarNbr()
+ *           - generateNewDerivedStepNbr()
+ *           - loadGeneratedFormulaIntoDerivStep()
+ *           - findMatchingStepFormula()
+ *           - addDerivStepForDeriveFeature()
  *
- *      - added renumbering feature:
- *            - proofWorksheet.renumberProofSteps()
+ *     - added renumbering feature:
+ *           - proofWorksheet.renumberProofSteps()
  *
- *  07-Sep-2006 Version 0.03 - add TMFF stuff (extensive).
- *            - added hintRefList for partial unification Hints
- *              which list assertions that unify with the
- *              DerivationStep's formula regardless of
- *              hypotheses (not done for derived steps
- *              or formulas and displayed only if the step
- *              fails to unify perfectly.)
- *            - modified to conform to Metamath.pdf spec change
- *              of 6-24-2006 prohibiting Stmt label and Sym id
- *              namespace collisions.
+ * 07-Sep-2006 Version 0.03 - add TMFF stuff (extensive).
+ *           - added hintRefList for partial unification Hints
+ *             which list assertions that unify with the
+ *             DerivationStep's formula regardless of
+ *             hypotheses (not done for derived steps
+ *             or formulas and displayed only if the step
+ *             fails to unify perfectly.)
+ *           - modified to conform to Metamath.pdf spec change
+ *             of 6-24-2006 prohibiting Stmt label and Sym id
+ *             namespace collisions.
  *
+ * 01-Jun-2007 Version 0.04
+ *           - de-nest inner classes
+ *           - replace ProofWorkStmt.status
  *
- *  01-Jun-2007 Version 0.04
- *            - de-nest inner classes
- *            - replace ProofWorkStmt.status
+ * Aug-01-2007 Version 0.05
+ *           - misc changes for Work Var enhancement
+ *           - ...one of which is removing "dummy vars"!
  *
+ * Nov-01-2007 Version 0.06
+ *           - replace (comment out) posCursorAtFirstIncompleteStmt()
+ *             with posCursorAtLastIncompleteStmt().
+ *           - add loadWorksheetProofLevelNumbers() call to
+ *             loadWorksheet() in the *finale* of the load.
+ *           - Modify buildExportTheoremProofBody() to pass
+ *             ProofDerivationStepEntry.proofLevel to the
+ *             DerivationStep and HypothesisStep constructors.
+ *           - ModifyBuildEmptyTheoremProofBody() and
+ *             buildDummyProofBody() to pass
+ *             proofLevel 0 to the DerivationStep and
+ *             HypothesisStep constructors.
+ *           - Modify loadWorksheet() to handle the new
+ *             "Local Ref" escape character, "#" and
+ *             call loadLocalRefDerivationStep().
+ *           - Add ERRMSG_HYP_HAS_LOCAL_REF_1, "E-PA-0377"
+ *           - Add ERRMSG_QED_HAS_LOCAL_REF_1, "E-PA-0378"
+ *           - Add findFirstMatchingRefOrStep()
+ *           - Add posCursorAtLastIncompleteOrQedStmt() for
+ *             use by ProofAsst -- to call when RPN proof
+ *             generated successfully.
  *
- *  Aug-01-2007 Version 0.05
- *            - misc changes for Work Var enhancement
- *            - ...one of which is removing "dummy vars"!
+ * Feb-01-2008 Version 0.07
+ *           - In getOutputMessageText() display error messages
+ *             before info messages. This corresponds to the
+ *             Nov-01-2007 release's cursor positioning scheme
+ *             so that when the cursor is positioned to the
+ *             first error, the error messages appear at the
+ *             top of the message area.
+ *           - Add ProofAsstCursor "proofInputCursor" to ProofWorksheet.
+ *             and added code to loadWorksheet to invoke
+ *             setInputCursorStmtIfHere() or
+ *             setInputCursorPosIfHere() to "find" the input cursor
+ *             during load operations.
+ *           - Modify tmffReformat() to reformat just one step.
+ *           - "re-added back" posCursorAtFirstIncompleteOrQedStmt();
+ *           - Add outputCursorInstrumentationIfEnabled()
  *
- *  Nov-01-2007 Version 0.06
- *            - replace (comment out) posCursorAtFirstIncompleteStmt()
- *              with posCursorAtLastIncompleteStmt().
- *            - add loadWorksheetProofLevelNumbers() call to
- *              loadWorksheet() in the *finale* of the load.
- *            - Modify buildExportTheoremProofBody() to pass
- *              ProofDerivationStepEntry.proofLevel to the
- *              DerivationStep and HypothesisStep constructors.
- *            - ModifyBuildEmptyTheoremProofBody() and
- *              buildDummyProofBody() to pass
- *              proofLevel 0 to the DerivationStep and
- *              HypothesisStep constructors.
- *            - Modify loadWorksheet() to handle the new
- *              "Local Ref" escape character, "#" and
- *              call loadLocalRefDerivationStep().
- *            - Add ERRMSG_HYP_HAS_LOCAL_REF_1, "E-PA-0377"
- *            - Add ERRMSG_QED_HAS_LOCAL_REF_1, "E-PA-0378"
- *            - Add findFirstMatchingRefOrStep()
- *            - Add posCursorAtLastIncompleteOrQedStmt() for
- *              use by ProofAsst -- to call when RPN proof
- *              generated successfully.
+ * Mar-01-2008 Version 0.08
+ *           - Added code for StepSelector enhancement.
  *
- *  Feb-01-2008 Version 0.07
- *            - In getOutputMessageText() display error messages
- *              before info messages. This corresponds to the
- *              Nov-01-2007 release's cursor positioning scheme
- *              so that when the cursor is positioned to the
- *              first error, the error messages appear at the
- *              top of the message area.
- *            - Add ProofAsstCursor "proofInputCursor" to ProofWorksheet.
- *              and added code to loadWorksheet to invoke
- *              setInputCursorStmtIfHere() or
- *              setInputCursorPosIfHere() to "find" the input cursor
- *              during load operations.
- *            - Modify tmffReformat() to reformat just one step.
- *            - "re-added back" posCursorAtFirstIncompleteOrQedStmt();
- *            - Add outputCursorInstrumentationIfEnabled()
+ * Aug-01-2008 Version 0.09
+ *           - Added getGeneratedProofStmt() to make it available
+ *             after successful unification. Returns null if
+ *             the GeneratedProofStmt is not present in the
+ *             ProofWorksheet (e.g. not unified...)
+ *           - Added getHypothesisStepFromList()
+ *               and getHypStepCnt()
  *
- *  Mar-01-2008 Version 0.08
- *            - Added code for StepSelector enhancement.
- *
- *  Aug-01-2008 Version 0.09
- *            - Added getGeneratedProofStmt() to make it available
- *              after successful unification. Returns null if
- *              the GeneratedProofStmt is not present in the
- *              ProofWorksheet (e.g. not unified...)
- *            - Added getHypothesisStepFromList()
- *                and getHypStepCnt()
- *
- *  Nov-01-2011 Version 0.10
- *            - minor re-writing of cursor handling code.
+ * Nov-01-2011 Version 0.10
+ *           - minor re-writing of cursor handling code.
  */
 
 package mmj.pa;
@@ -124,72 +122,61 @@ import mmj.verify.Grammar;
 import mmj.verify.ProofDerivationStepEntry;
 
 /**
- *  ProofWorksheet is generated from a text area (String)
- *  using ProofWorksheet methods.
- *  <p>
- *  There are several inner classes, and due to the
- *  interrelated nature of the statements of a proof
- *  all of these classes are put together in ProofWorksheet
- *  (inner classes can access the outer class methods and
- *  elements.)
- *  <p>
- *  A large quantity of information and useful stuff is
- *  contained in mmj.pa.PaConstants.java.
- *  <p>
- *  =====================================================
- *  <p>
- *  <b>"Derive" Feature Notes (Version 0.02)
- *  <p>
- *  =====================================================
- *  <p>
- *  The are a few changes in ProofWorksheet to support the
- *  Proof Assistant "Derive" feature. The major changes involve
- *  the Hyp and Formula fields in DerivationStep:
- *  <p>
- *  1. Formula: on DerivationSteps except for the "qed" step,
- *  Formula is now optional, but if Formula is not entered
- *  then Ref is required. Simple: Formula and/or Ref required
- *  on non-"qed" derivation steps.
- *  <p>
- *     If Formula is not entered, then the first token after
- *     the Step:Hyp:Ref field's token must be the start of a
- *     new statement in column 1 of a new line.
- *  <p>
- *     The new "deriveStepFormula" flag is set to true if Formula
- *     not input on a non-"qed" derivation step.
- *  <p>
- *  2, Hyp: "?" Hyp entries in the Hyp sub-field of Step:Hyp:Ref
- *  have a new meaning if Ref is input; there are new
- *  validation edits in this case. NOTE: this applies even to
- *  the "qed" step, but of course not the HypothesisSteps,
- *  for which a Hyp entry is meaningless and forbidden.
- *  <p>
- *     If one or more Hyp entries is "?" and Ref is input, then
- *     the ProofUnifier will invoke the "Derive" feature. The
- *     new "DeriveStepHyps" flag is set to true and the number
- *     of non-"?" Hyp entries must be < the number of Logical Hyps
- *     for the Ref assertion. If fewer Hyp entries are input
- *     than needed by the Ref, and one of the Hyp entries is "?",
- *     then extra "?" entries are suffixed to the Hyp sub-field.
- *     For example, if the user inputs Hyp = "?,2" and the Ref
- *     requires 3 Logical Hypotheses then the Hyp is automatically
- *     expanded to "?,2,?". Excessive "?" Hyps are also "forgiven",
- *     meaning that if the user inputs "?,2,?" and the Ref requires
- *     only 2 Logical Hypotheses, then the Hyp is shortened to
- *     "?,2" (the excess "?" Hyps are removed from the right.)
- *  <p>
- *     The new int field, "nbrMissingHyps" is set to the number
- *     of "?" Hyp entries -- after adjustment for the number of
- *     Logical Hypotheses needed by the Ref.
- *  <p>
- *     The new ProofStepStmt field,
- *     <code>generatedByDeriveFeature</code> designates a step
- *     as being automatically generated by the "Derive" feature.
- *     When set to true a proof step can be subjected to
- *     extra/custom processing, for example, after the unification
- *     search process.
- *  <p>
- *  =====================================================
+ * ProofWorksheet is generated from a text area (String) using ProofWorksheet
+ * methods.
+ * <p>
+ * There are several inner classes, and due to the interrelated nature of the
+ * statements of a proof all of these classes are put together in ProofWorksheet
+ * (inner classes can access the outer class methods and elements.)
+ * <p>
+ * A large quantity of information and useful stuff is contained in
+ * mmj.pa.PaConstants.java.
+ * <p>
+ * =====================================================
+ * <p>
+ * <b>"Derive" Feature Notes (Version 0.02)
+ * <p>
+ * =====================================================
+ * <p>
+ * The are a few changes in ProofWorksheet to support the Proof Assistant
+ * "Derive" feature. The major changes involve the Hyp and Formula fields in
+ * DerivationStep:
+ * <p>
+ * 1. Formula: on DerivationSteps except for the "qed" step, Formula is now
+ * optional, but if Formula is not entered then Ref is required. Simple: Formula
+ * and/or Ref required on non-"qed" derivation steps.
+ * <p>
+ * If Formula is not entered, then the first token after the Step:Hyp:Ref
+ * field's token must be the start of a new statement in column 1 of a new line.
+ * <p>
+ * The new "deriveStepFormula" flag is set to true if Formula not input on a
+ * non-"qed" derivation step.
+ * <p>
+ * 2, Hyp: "?" Hyp entries in the Hyp sub-field of Step:Hyp:Ref have a new
+ * meaning if Ref is input; there are new validation edits in this case. NOTE:
+ * this applies even to the "qed" step, but of course not the HypothesisSteps,
+ * for which a Hyp entry is meaningless and forbidden.
+ * <p>
+ * If one or more Hyp entries is "?" and Ref is input, then the ProofUnifier
+ * will invoke the "Derive" feature. The new "DeriveStepHyps" flag is set to
+ * true and the number of non-"?" Hyp entries must be < the number of Logical
+ * Hyps for the Ref assertion. If fewer Hyp entries are input than needed by the
+ * Ref, and one of the Hyp entries is "?", then extra "?" entries are suffixed
+ * to the Hyp sub-field. For example, if the user inputs Hyp = "?,2" and the Ref
+ * requires 3 Logical Hypotheses then the Hyp is automatically expanded to
+ * "?,2,?". Excessive "?" Hyps are also "forgiven", meaning that if the user
+ * inputs "?,2,?" and the Ref requires only 2 Logical Hypotheses, then the Hyp
+ * is shortened to "?,2" (the excess "?" Hyps are removed from the right.)
+ * <p>
+ * The new int field, "nbrMissingHyps" is set to the number of "?" Hyp entries
+ * -- after adjustment for the number of Logical Hypotheses needed by the Ref.
+ * <p>
+ * The new ProofStepStmt field, {@code generatedByDeriveFeature} designates a
+ * step as being automatically generated by the "Derive" feature. When set to
+ * true a proof step can be subjected to extra/custom processing, for example,
+ * after the unification search process.
+ * <p>
+ * =====================================================
  */
 public class ProofWorksheet {
 
@@ -210,8 +197,8 @@ public class ProofWorksheet {
 
     /*  hasWorkVarsOrDerives is set to true in DerivationStep
         and is used in ProofUnifier to decide whether or not
-     *  to make a preliminary pass through the Proof Worksheet
-     *  to deal with WorkVars and/or DeriveStep/DeriveFormula.
+     * to make a preliminary pass through the Proof Worksheet
+     * to deal with WorkVars and/or DeriveStep/DeriveFormula.
      */
     /* friendly */boolean hasWorkVarsOrDerives;
 
@@ -256,23 +243,18 @@ public class ProofWorksheet {
     /* friendly */List<List<DjVars>> proofSoftDjVarsErrorList;
 
     /**
-     *  Constructor for skeletal ProofWorksheet.
-     *
-     *  This constructor is used in
-     *  ProofAsst.updateWorksheetWithException().
-     *  to create a worksheet that has "structuralErrors".
-     *  When the GUI displays a worksheet with structural
-     *  errors it does not update its proofTextArea,
-     *  and thus, the original user input is left untouched.
-     *
-     *  @param proofAsstPreferences variable settings
-     *  @param messages the mmj.lang.Messages object used to store
-     *                  error and informational messages.
-     *  @param structuralErrors indicates whether or not the
-     *                          ProofWorksheet has severe/fatal
-     *                          validation errors.
-     *  @param proofCursor ProofAsstCursor set to position
-     *                     of error.
+     * Constructor for skeletal ProofWorksheet. This constructor is used in
+     * ProofAsst.updateWorksheetWithException(). to create a worksheet that has
+     * "structuralErrors". When the GUI displays a worksheet with structural
+     * errors it does not update its proofTextArea, and thus, the original user
+     * input is left untouched.
+     * 
+     * @param proofAsstPreferences variable settings
+     * @param messages the mmj.lang.Messages object used to store error and
+     *            informational messages.
+     * @param structuralErrors indicates whether or not the ProofWorksheet has
+     *            severe/fatal validation errors.
+     * @param proofCursor ProofAsstCursor set to position of error.
      */
     public ProofWorksheet(final ProofAsstPreferences proofAsstPreferences,
         final Messages messages, final boolean structuralErrors,
@@ -288,18 +270,15 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Constructor creating empty ProofWorksheet to be loaded
-     *  using a Tokenizer.
-     *
-     *  This constructor is used by ProofWorksheetParser.next().
-     *
-     *  @param proofTextTokenizer the mmj.mmio.Tokenizer input stream
-     *                            parser.
-     *  @param proofAsstPreferences variable settings
-     *  @param logicalSystem the loaded Metamath data
-     *  @param grammar the mmj.verify.Grammar object
-     *  @param messages the mmj.lang.Messages object used to store
-     *                  error and informational messages.
+     * Constructor creating empty ProofWorksheet to be loaded using a Tokenizer.
+     * This constructor is used by ProofWorksheetParser.next().
+     * 
+     * @param proofTextTokenizer the mmj.mmio.Tokenizer input stream parser.
+     * @param proofAsstPreferences variable settings
+     * @param logicalSystem the loaded Metamath data
+     * @param grammar the mmj.verify.Grammar object
+     * @param messages the mmj.lang.Messages object used to store error and
+     *            informational messages.
      */
     public ProofWorksheet(final Tokenizer proofTextTokenizer,
         final ProofAsstPreferences proofAsstPreferences,
@@ -326,21 +305,18 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Constructor creating a ProofWorksheet initialized
-     *  for a new proof for a specific theorem label
-     *
-     *  This constructor is used by ProofAsst.startNewProof().
-     *
-     *  Note: the ProofWorksheet created here is not a fully
-     *        populated object -- it is destined for a one-way
-     *        trip to the output screen via the GUI.
-     *
-     *  @param newTheoremLabel Theorem label String.
-     *  @param proofAsstPreferences variable settings
-     *  @param logicalSystem the loaded Metamath data
-     *  @param grammar the mmj.verify.Grammar object
-     *  @param messages the mmj.lang.Messages object used to store
-     *                  error and informational messages.
+     * Constructor creating a ProofWorksheet initialized for a new proof for a
+     * specific theorem label This constructor is used by
+     * ProofAsst.startNewProof(). Note: the ProofWorksheet created here is not a
+     * fully populated object -- it is destined for a one-way trip to the output
+     * screen via the GUI.
+     * 
+     * @param newTheoremLabel Theorem label String.
+     * @param proofAsstPreferences variable settings
+     * @param logicalSystem the loaded Metamath data
+     * @param grammar the mmj.verify.Grammar object
+     * @param messages the mmj.lang.Messages object used to store error and
+     *            informational messages.
      */
     public ProofWorksheet(final String newTheoremLabel,
         final ProofAsstPreferences proofAsstPreferences,
@@ -375,24 +351,20 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Constructor used for exporting a Proof Worksheet
-     *  containing a completed proof.
-     *
-     *  Note: the worksheet created by this constructor
-     *        is "skeletal" in the sense that it is
-     *        destined for output only.
-     *
-     *  This constructor is used by ProofAsst.exportToFile().
-     *
-     *  @param theorem to be used to create ProofWorksheet.
-     *  @param proofDerivationStepList List of
-     *                   mmj.verify.ProofDerivationStepEntry
-     *                   created by VerifyProofs
-     *  @param proofAsstPreferences variable settings
-     *  @param logicalSystem the loaded Metamath data
-     *  @param grammar the mmj.verify.Grammar object
-     *  @param messages the mmj.lang.Messages object used to store
-     *                  error and informational messages.
+     * Constructor used for exporting a Proof Worksheet containing a completed
+     * proof. Note: the worksheet created by this constructor is "skeletal" in
+     * the sense that it is destined for output only. This constructor is used
+     * by ProofAsst.exportToFile().
+     * 
+     * @param theorem to be used to create ProofWorksheet.
+     * @param proofDerivationStepList List of
+     *            mmj.verify.ProofDerivationStepEntry created by VerifyProofs
+     * @param deriveFormulas if true, derive formulas during creation
+     * @param proofAsstPreferences variable settings
+     * @param logicalSystem the loaded Metamath data
+     * @param grammar the mmj.verify.Grammar object
+     * @param messages the mmj.lang.Messages object used to store error and
+     *            informational messages.
      */
     public ProofWorksheet(final Theorem theorem,
         final List<ProofDerivationStepEntry> proofDerivationStepList,
@@ -441,44 +413,39 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Gets structuralErrors switch for ProofWorksheet.
-     *
-     *  A "structural error" means that the Proof Worksheet
-     *  contains one or more validation errors that
-     *  prevent Unification. An example would be any
-     *  individual field error or a parse error, theorem
-     *  label not found, etc. When ProofWorksheet is
-     *  done validating a proof it must be *clean* for
-     *  ProofUnifier (or else bad things would happen.)
-     *
-     *  @return      boolean structuralErrors
+     * Gets structuralErrors switch for ProofWorksheet. A "structural error"
+     * means that the Proof Worksheet contains one or more validation errors
+     * that prevent Unification. An example would be any individual field error
+     * or a parse error, theorem label not found, etc. When ProofWorksheet is
+     * done validating a proof it must be *clean* for ProofUnifier (or else bad
+     * things would happen.)
+     * 
+     * @return boolean structuralErrors
      */
     public boolean hasStructuralErrors() {
         return structuralErrors;
     }
 
     /**
-     *  Sets structuralErrors switch for ProofWorksheet.
-     *  <p>
-     *  See hasStructuralErrors() for more info.
-     *  <p>
-     *  @param structuralErrors boolean, true or false.
+     * Sets structuralErrors switch for ProofWorksheet.
+     * <p>
+     * See hasStructuralErrors() for more info.
+     * 
+     * @param structuralErrors boolean, true or false.
      */
     public void setStructuralErrors(final boolean structuralErrors) {
         this.structuralErrors = structuralErrors;
     }
 
     /**
-     *  Gets the number of proof derivation steps that are
-     *  ready for Unification.
-     *  <p>
-     *  Note: a derivation step with a "?" in its Hyp field
-     *  is not ready for unification, but interestingly, a
-     *  subsequent step that refers to that step as one of its
-     *  Hyps, can be unified (it just can't be "proved".)
-     *
-     *  @return      number of derivation steps in the proof that
-     *           are ready for Unification.
+     * Gets the number of proof derivation steps that are ready for Unification.
+     * <p>
+     * Note: a derivation step with a "?" in its Hyp field is not ready for
+     * unification, but interestingly, a subsequent step that refers to that
+     * step as one of its Hyps, can be unified (it just can't be "proved".)
+     * 
+     * @return number of derivation steps in the proof that are ready for
+     *         Unification.
      */
     public int getNbrDerivStepsReadyForUnify() {
         return nbrDerivStepsReadyForUnify;
@@ -489,13 +456,11 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Returns the isNewTheorem boolean value indicating
-     *  whether the theorem is new or is already in the
-     *  Metamath file that was loaded.
-     *
-     *  @return      boolean isNewTheorem, which if true means
-     *           that the theorem being proved is not already
-     *           in the Metamath database that was loaded.
+     * Returns the isNewTheorem boolean value indicating whether the theorem is
+     * new or is already in the Metamath file that was loaded.
+     * 
+     * @return boolean isNewTheorem, which if true means that the theorem being
+     *         proved is not already in the Metamath database that was loaded.
      */
     public boolean isNewTheorem() {
         return newTheorem;
@@ -506,29 +471,26 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Returns the ProofWorksheet's Theorem reference.
-     *
-     *  @return      Theorem may be null if new theorem or errors
-     *           in ProofWorksheet!
+     * Returns the ProofWorksheet's Theorem reference.
+     * 
+     * @return Theorem may be null if new theorem or errors in ProofWorksheet!
      */
     public Theorem getTheorem() {
         return theorem;
     }
 
     /**
-     *  Returns the ProofWorksheet theorem maxSeq value.
-     *  <p>
-     *  For an existing theorem (in the loaded database),
-     *  maxSeq is just the MObj.seq number of the theorem
-     *  itself. For a new theorem the LocAfter statement
-     *  label defines the maxSeq (maxSeq = locAfter.seq + 1)
-     *  <p>
-     *  The maxSeq value sets a boundary for parsing, proofs,
-     *  formulas, etc. A Metamath statement cannot legitimately
-     *  use or refer to another Metamath statement with a
-     *  sequence number >= its own (no recursive references.)
-     *  <p>
-     *  @return      maxSeq number in use for the current proof.
+     * Returns the ProofWorksheet theorem maxSeq value.
+     * <p>
+     * For an existing theorem (in the loaded database), maxSeq is just the
+     * MObj.seq number of the theorem itself. For a new theorem the LocAfter
+     * statement label defines the maxSeq (maxSeq = locAfter.seq + 1)
+     * <p>
+     * The maxSeq value sets a boundary for parsing, proofs, formulas, etc. A
+     * Metamath statement cannot legitimately use or refer to another Metamath
+     * statement with a sequence number >= its own (no recursive references.)
+     * 
+     * @return maxSeq number in use for the current proof.
      */
     public int getMaxSeq() {
         return maxSeq;
@@ -539,68 +501,59 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Returns the proof theorem's "comboFrame".
-     *  <p>
-     *  "comboFrame" and comboVarMap combine the optional and
-     *  mandatory frame entries for the theorem, including
-     *  any $d statements added as part of the proof.
-     *  <p>
-     *  For an existing theorem this just means merging the
-     *  Assrt.mandFrame, Theorem.optFrame and any proof $d's,
-     *  and then deriving the comboVarMap from the set
-     *  of VarHyp's in the comboFrame.
-     *  <p>
-     *  For a new theorem this means constructing comboFrame
-     *  using (ScopeDef)(LogicalSystem.getScopeDefList()).get(0)
-     *  to obtain the sets of globally active Var's, VarHyp's
-     *  and DjVars (new Theorems in ProofAsst can only use
-     *  global scope Var's and VarHyp's) and adding in any
-     *  $d's from the proof.
-     *  <p>
-     *  The REASON why the optional and mandatory frames can
-     *  be combined in this way is a little bit subtle: they
-     *  only need to be separate if the new theorem is going
-     *  to be referred to in later theorems' proofs, and
-     *  ProofAsst does not provide that capability at this
-     *  time.
-     *  <p>
-     *  The REASON why we want to combine the optional and
-     *  mandatory frames is to simplify handling of
-     *  derivation steps within the proof. Variables used
-     *  in the intermediate steps would normally be part of
-     *  the optional frame, if not used in the theorem's
-     *  formula or its LogHyp formulas. That would create
-     *  more work, especially at grammatical parse time,
-     *  when we need to match each Var to its active VarHyp.
-     *  Soooo...instead of building a mandatory frame for each
-     *  intermediate step we just build a combo frame for
-     *  use in every step (and note that DjVars apply to
-     *  every step regardless of the location of the $d
-     *  ProofWorkStmt within the Proof Text area.
-     *
-     *  @return      MandFrame combined with OptFrame values for
-     *           the theorem.
+     * Returns the proof theorem's "comboFrame".
+     * <p>
+     * "comboFrame" and comboVarMap combine the optional and mandatory frame
+     * entries for the theorem, including any $d statements added as part of the
+     * proof.
+     * <p>
+     * For an existing theorem this just means merging the Assrt.mandFrame,
+     * Theorem.optFrame and any proof $d's, and then deriving the comboVarMap
+     * from the set of VarHyp's in the comboFrame.
+     * <p>
+     * For a new theorem this means constructing comboFrame using
+     * (ScopeDef)(LogicalSystem.getScopeDefList()).get(0) to obtain the sets of
+     * globally active Var's, VarHyp's and DjVars (new Theorems in ProofAsst can
+     * only use global scope Var's and VarHyp's) and adding in any $d's from the
+     * proof.
+     * <p>
+     * The REASON why the optional and mandatory frames can be combined in this
+     * way is a little bit subtle: they only need to be separate if the new
+     * theorem is going to be referred to in later theorems' proofs, and
+     * ProofAsst does not provide that capability at this time.
+     * <p>
+     * The REASON why we want to combine the optional and mandatory frames is to
+     * simplify handling of derivation steps within the proof. Variables used in
+     * the intermediate steps would normally be part of the optional frame, if
+     * not used in the theorem's formula or its LogHyp formulas. That would
+     * create more work, especially at grammatical parse time, when we need to
+     * match each Var to its active VarHyp. Soooo...instead of building a
+     * mandatory frame for each intermediate step we just build a combo frame
+     * for use in every step (and note that DjVars apply to every step
+     * regardless of the location of the $d ProofWorkStmt within the Proof Text
+     * area.
+     * 
+     * @return MandFrame combined with OptFrame values for the theorem.
      */
     public MandFrame getComboFrame() {
         return comboFrame;
     }
 
     /**
-     *  Gets the hypStepCnt counter of the number of HypothesisStep
-     *  statements in the ProofWorksheet.
-     *  <p>
-     *  @return the hypStepCnt.
+     * Gets the hypStepCnt counter of the number of HypothesisStep statements in
+     * the ProofWorksheet.
+     * 
+     * @return the hypStepCnt.
      */
     public int getHypStepCnt() {
         return hypStepCnt;
     }
 
     /**
-     *  Returns a given HypothesisStep from the
-     *  ProofWorkStmtList.
-     *  <p>
-     *  @param h the LogHyp sought in the ProofWorkStmtList.
-     *  @return the HypothesisStep if found, or null.
+     * Returns a given HypothesisStep from the ProofWorkStmtList.
+     * 
+     * @param h the LogHyp sought in the ProofWorkStmtList.
+     * @return the HypothesisStep if found, or null.
      */
     public HypothesisStep getHypothesisStepFromList(final LogHyp h) {
         for (final ProofWorkStmt w : getProofWorkStmtList())
@@ -613,39 +566,34 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Returns an Iterable over the ProofWorksheet
-     *  ProofWorkStmt ArrayList.
-     *  <p>
-     *
-     *  @return Iterable over ProofWorkStmtList.
+     * Returns an Iterable over the ProofWorksheet ProofWorkStmt ArrayList.
+     * 
+     * @return Iterable over ProofWorkStmtList.
      */
     public Iterable<ProofWorkStmt> getProofWorkStmtList() {
         return proofWorkStmtList;
     }
 
     /**
-     *  Returns the count of items in the ProofWorksheet
-     *  ProofWorkStmt ArrayList.
-     *  <p>
-     *  @return count of items in ProofWorkStmtList.
+     * Returns the count of items in the ProofWorksheet ProofWorkStmt ArrayList.
+     * 
+     * @return count of items in ProofWorkStmtList.
      */
     public int getProofWorkStmtListCnt() {
         return proofWorkStmtList.size();
     }
 
     /**
-     *  Computes the line number of a ProofWorkStmt on the screen
-     *  text area.
-     *  <p>
-     *  This algorithm requires that we know in advance how
-     *  many lines are occupied by each ProofWorkStmt. The
-     *  computation is then simple: just total the previous
-     *  lineCnt's and add 1. (But if lineCnt is wrong, then
-     *  we are doomed -- note that TMFF went to a lot of
-     *  trouble to obtain lineCnt, and lineCnt is computed
-     *  during parsing of an input ProofWorksheet!)
-     *  <p>
-     *  @return line number in ProofWorksheet text area.
+     * Computes the line number of a ProofWorkStmt on the screen text area.
+     * <p>
+     * This algorithm requires that we know in advance how many lines are
+     * occupied by each ProofWorkStmt. The computation is then simple: just
+     * total the previous lineCnt's and add 1. (But if lineCnt is wrong, then we
+     * are doomed -- note that TMFF went to a lot of trouble to obtain lineCnt,
+     * and lineCnt is computed during parsing of an input ProofWorksheet!)
+     * 
+     * @param x the owner ProofWorkStmt
+     * @return line number in ProofWorksheet text area.
      */
     public int computeProofWorkStmtLineNbr(final ProofWorkStmt x) {
         int total = 0;
@@ -658,10 +606,11 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Determines which ProofWorkStmt is located at a given
-     *  line number of the screen text area.
-     *  <p>
-     *  @return ProofWorkStmt at the input line number, or null.
+     * Determines which ProofWorkStmt is located at a given line number of the
+     * screen text area.
+     * 
+     * @param n the line number
+     * @return ProofWorkStmt at the input line number, or null.
      */
     public ProofWorkStmt computeProofWorkStmtOfLineNbr(final int n) {
         int total = 0;
@@ -674,11 +623,10 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Computes the total number of text area lines required
-     *  to display all ProofWorkStmt objects in the ProofWorksheet.
-     *  <p>
-     *  @return total number of lines required for
-     *          ProofWorkStmt's.
+     * Computes the total number of text area lines required to display all
+     * ProofWorkStmt objects in the ProofWorksheet.
+     * 
+     * @return total number of lines required for ProofWorkStmt's.
      */
     public int computeTotalLineCnt() {
         int total = 0;
@@ -688,37 +636,33 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Returns the ProofWorksheet FooterStmt object.
-     *  <p>
-     *  @return FooterStmt of ProofWorksheet.
+     * Returns the ProofWorksheet FooterStmt object.
+     * 
+     * @return FooterStmt of ProofWorksheet.
      */
     public FooterStmt getFooterStmt() {
         return footerStmt;
     }
 
     /**
-     *  Returns the QED step of the proof, which is the
-     *  final derivation step.
-     *  <p>
-     *  Note: the nomenclature here "qed step" is
-     *        something made up for ProofAssistant
-     *        to make things easier to explain.
-     *
-     *  @return      the final DerivationStep in the ProofWorksheet.
+     * Returns the QED step of the proof, which is the final derivation step.
+     * <p>
+     * Note: the nomenclature here "qed step" is something made up for
+     * ProofAssistant to make things easier to explain.
+     * 
+     * @return the final DerivationStep in the ProofWorksheet.
      */
     public DerivationStep getQedStep() {
         return qedStep;
     }
 
     /**
-     *  Returns the proof RPN of the QED step of the proof.
-     *  <p>
-     *  Note that each DerivationStep will have its own
-     *  proof -- if the proof is valid -- but the QED
-     *  step's proof is the proof of the theorem itself!
-     *
-     *  @return      the RPN proof of the final DerivationStep
-     *           in the ProofWorksheet.
+     * Returns the proof RPN of the QED step of the proof.
+     * <p>
+     * Note that each DerivationStep will have its own proof -- if the proof is
+     * valid -- but the QED step's proof is the proof of the theorem itself!
+     * 
+     * @return the RPN proof of the final DerivationStep in the ProofWorksheet.
      */
     public RPNStep[] getQedStepProofRPN() {
         RPNStep[] rpn = null;
@@ -753,29 +697,28 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Get the ProofWorksheet ProofCursor object.
-     *
-     *  @return ProofCursor object for ProofWorksheet.
+     * Get the ProofWorksheet ProofCursor object.
+     * 
+     * @return ProofCursor object for ProofWorksheet.
      */
     public ProofAsstCursor getProofCursor() {
         return proofCursor;
     }
 
     /**
-     *  Set the ProofWorksheet ProofCursor object.
-     *
-     *  @param proofCursor object for ProofWorksheet.
+     * Set the ProofWorksheet ProofCursor object.
+     * 
+     * @param proofCursor object for ProofWorksheet.
      */
     public void setProofCursor(final ProofAsstCursor proofCursor) {
         this.proofCursor = proofCursor;
     }
 
     /**
-     *  If cursor not already set, positions the ProofWorksheet
-     *  ProofCursor at the last ProofWorkStmt with status =
-     *  incomplete and sets the cursor at the start of the Ref
-     *  sub-field. If cursor still not set (no incomplete steps),
-     *  positions the cursor at the 'qed' step.
+     * If cursor not already set, positions the ProofWorksheet ProofCursor at
+     * the last ProofWorkStmt with status = incomplete and sets the cursor at
+     * the start of the Ref sub-field. If cursor still not set (no incomplete
+     * steps), positions the cursor at the 'qed' step.
      */
     public void posCursorAtLastIncompleteOrQedStmt() {
         if (!proofCursor.cursorIsSet) {
@@ -786,11 +729,10 @@ public class ProofWorksheet {
     }
 
     /**
-     *  If cursor not already set, positions the ProofWorksheet
-     *  ProofCursor at the first ProofWorkStmt with status =
-     *  incomplete and sets the cursor at the start of the Ref
-     *  sub-field. If cursor still not set (no incomplete steps),
-     *  positions the cursor at the 'qed' step.
+     * If cursor not already set, positions the ProofWorksheet ProofCursor at
+     * the first ProofWorkStmt with status = incomplete and sets the cursor at
+     * the start of the Ref sub-field. If cursor still not set (no incomplete
+     * steps), positions the cursor at the 'qed' step.
      */
     public void posCursorAtFirstIncompleteOrQedStmt() {
         if (!proofCursor.cursorIsSet) {
@@ -801,8 +743,7 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Positions the cursor at the 'qed' step if the
-     *  cursor is not already set.
+     * Positions the cursor at the 'qed' step if the cursor is not already set.
      */
     public void posCursorAtQedStmt() {
         if (!proofCursor.cursorIsSet)
@@ -818,9 +759,9 @@ public class ProofWorksheet {
 //    }
 
     /**
-     *  Positions the ProofWorksheet ProofCursor at the
-     *  last ProofWorkStmt with status = incomplete and
-     *  sets the cursor at the start of the Ref sub-field.
+     * Positions the ProofWorksheet ProofCursor at the last ProofWorkStmt with
+     * status = incomplete and sets the cursor at the start of the Ref
+     * sub-field.
      */
     public void posCursorAtLastIncompleteStmt() {
 
@@ -838,9 +779,9 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Positions the ProofWorksheet ProofCursor at the
-     *  first ProofWorkStmt with status = incomplete and
-     *  sets the cursor at the start of the Ref sub-field.
+     * Positions the ProofWorksheet ProofCursor at the first ProofWorkStmt with
+     * status = incomplete and sets the cursor at the start of the Ref
+     * sub-field.
      */
     public void posCursorAtFirstIncompleteStmt() {
 
@@ -866,9 +807,9 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Returns the theorem label, if present.
-     *
-     *  @return      String containing theorem label, may be null;
+     * Returns the theorem label, if present.
+     * 
+     * @return String containing theorem label, may be null;
      */
     public String getTheoremLabel() {
         if (headerStmt != null)
@@ -878,17 +819,14 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Searches up to an exclusive endpoint in the
-     *  proofWorkStmtList for a step whose formula
-     *  matches the input formula.
-     *
-     *  @param  searchFormula Formula we're looking for
-     *  @param  exclusiveEndpointStep Exclusive endpoint of the
-     *               search (return null as soon as this step
-     *               is reached, even if its formula matches.)
-     *
-     *  @return ProofStepStmt matching the formula or null
-     *          if Not Found.
+     * Searches up to an exclusive endpoint in the proofWorkStmtList for a step
+     * whose formula matches the input formula.
+     * 
+     * @param searchFormula Formula we're looking for
+     * @param exclusiveEndpointStep Exclusive endpoint of the search (return
+     *            null as soon as this step is reached, even if its formula
+     *            matches.)
+     * @return ProofStepStmt matching the formula or null if Not Found.
      */
     public ProofStepStmt findMatchingStepFormula(final Formula searchFormula,
         final ProofStepStmt exclusiveEndpointStep)
@@ -907,12 +845,11 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Renumbers each ProofWorkStmt according to an input
-     *  renumberInterval and alters each Hyp reference to
-     *  conform to the new step numbers.
-     *
-     *  @param  renumberInterval is the number to add to each
-     *          new step number. Commonly equal to 1.
+     * Renumbers each ProofWorkStmt according to an input renumberInterval and
+     * alters each Hyp reference to conform to the new step numbers.
+     * 
+     * @param renumberInterval is the number to add to each new step number.
+     *            Commonly equal to 1.
      */
     public void renumberProofSteps(final int renumberInterval) {
 
@@ -947,12 +884,10 @@ public class ProofWorksheet {
         }
     }
     /**
-     *  Reformats all or just one ProofStepStmt using TMFF.
-     *
-     *  @param inputCursorStep set to true to reformat just
-     *                         the proof step underneath the
-     *                         cursor.
-
+     * Reformats all or just one ProofStepStmt using TMFF.
+     * 
+     * @param inputCursorStep set to true to reformat just the proof step
+     *            underneath the cursor.
      */
     public void tmffReformat(final boolean inputCursorStep) {
         ProofWorkStmt o = null;
@@ -970,8 +905,8 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Add extra newline to end of qed step so that
-     *  the footer step has a blank line before it.
+     * Add extra newline to end of qed step so that the footer step has a blank
+     * line before it.
      */
     public void doubleSpaceQedStep() {
         final DerivationStep d = getQedStep();
@@ -983,24 +918,20 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Generates a DerivationStep and adds it to the
-     *  proofWorkStmtList ArrayList on behalf of
-     *  ProofUnifier.
-     *  <p>
-     *  If !workVarList.isEmpty() then the new step
-     *  is marked incomplete and given a Hyp = "?" -- no
-     *  unification need be attempted. Otherwise, unification
-     *  can be attempted using no Hyps. If this fails then
-     *  because the step is marked "generated", the step
-     *  can be updated to show Hyp "?" (this is a helpful
-     *  feature for the users, going the extra mile...)
-     *
-     *  @param workVarList List of Work Vars in formula.
-     *  @param formula Formula of new step.
-     *  @param formulaParseTree ParseTree of new Formula
-     *  @param derivStep insert point for new step.
-     *
-     *  @return DerivationStep added to the ProofWorksheet.
+     * Generates a DerivationStep and adds it to the proofWorkStmtList ArrayList
+     * on behalf of ProofUnifier.
+     * <p>
+     * If !workVarList.isEmpty() then the new step is marked incomplete and
+     * given a Hyp = "?" -- no unification need be attempted. Otherwise,
+     * unification can be attempted using no Hyps. If this fails then because
+     * the step is marked "generated", the step can be updated to show Hyp "?"
+     * (this is a helpful feature for the users, going the extra mile...)
+     * 
+     * @param workVarList List of Work Vars in formula.
+     * @param formula Formula of new step.
+     * @param formulaParseTree ParseTree of new Formula
+     * @param derivStep insert point for new step.
+     * @return DerivationStep added to the ProofWorksheet.
      */
     public DerivationStep addDerivStepForDeriveFeature(
         final List<Var> workVarList, final Formula formula,
@@ -1046,11 +977,10 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Generates the next value of greatestStepNbr for use
-     *  in the ProofUnifier Derive feature and returns the
-     *  new value.
-     *
-     *  @return value of new greatestStepNbr.
+     * Generates the next value of greatestStepNbr for use in the ProofUnifier
+     * Derive feature and returns the new value.
+     * 
+     * @return value of new greatestStepNbr.
      */
     public int generateNewDerivedStepNbr() {
         updateNextGreatestStepNbr(greatestStepNbr
@@ -1059,59 +989,41 @@ public class ProofWorksheet {
     }
 
     /**
-     *   Load the ProofWorksheet starting with the input token.
-     *   <p>
-     *   <ul>
-     *   <li>- The first token of each statement must start
-     *     in column 1. this means that
-     *         ((nextToken.length -
-     *           proofTextTokenizer.getCurrentColumnNbr()) == 0)
-     *     must be true
-     *     -->else throw ProofAsstException!
-     *
-     *   <li>- First statement must be a Header, so
-     *     Load Header using input nextToken
-     *     If error, throw ProofAsstException.
-     *
-     *   <li>- Loads proof text statements until footer reached
-     *     or end of file, discarding any generated proof
-     *     statements along the way:
-     *         - reject a 2nd Header, if found;
-     *
-     *   <li>- After loading each statement makes sure that worksheet:
-     *       - begins with a header statement;
-     *       - contains a "qed" proof step;
-     *       - ends with a footer statement;
-     *     If missing footer, qed step or header step,
-     *         throw ProofAsstException to terminate the parse
-     *
-     *   <li>- If no errors so far,
-     *         performs remaining "relational" edits on worksheet
-     *         statements.
-     *
-     *   <li>- During processing here and in any subroutines, a
-     *     thrown ProofAsstException indicates that the parse
-     *     is terminated completely.
-     *   </ul>
-     *   <p>
-     *     Otherwise, return the nextToken value which should
-     *     be the first token of the next ProofWorksheet or
-     *     null if EOF. (Each routine that loads a statement
-     *     will return the next token after the end of the
-     *     statement's input text.)
-     *
-     *
-     *  @param nextToken the first token to be loaded.
-     *
-     *  @param inputCursorPos offset plus one of Caret in
-     *         Proof TextArea or -1 if not available.
-     *
-     *  @param stepRequestIn may be null, or StepSelector Search or
-     *                     Choice request and will be loaded into
-     *                     the ProofWorksheet.
-     *
-     *  @return      String token starting the next ProofWorksheet
-     *           or null.
+     * Load the ProofWorksheet starting with the input token.
+     * <p>
+     * <ul>
+     * <li>- The first token of each statement must start in column 1. this
+     * means that ((nextToken.length - proofTextTokenizer.getCurrentColumnNbr())
+     * == 0) must be true -->else throw ProofAsstException!
+     * <li>- First statement must be a Header, so Load Header using input
+     * nextToken If error, throw ProofAsstException.
+     * <li>- Loads proof text statements until footer reached or end of file,
+     * discarding any generated proof statements along the way: - reject a 2nd
+     * Header, if found;
+     * <li>- After loading each statement makes sure that worksheet: - begins
+     * with a header statement; - contains a "qed" proof step; - ends with a
+     * footer statement; If missing footer, qed step or header step, throw
+     * ProofAsstException to terminate the parse
+     * <li>- If no errors so far, performs remaining "relational" edits on
+     * worksheet statements.
+     * <li>- During processing here and in any subroutines, a thrown
+     * ProofAsstException indicates that the parse is terminated completely.
+     * </ul>
+     * <p>
+     * Otherwise, return the nextToken value which should be the first token of
+     * the next ProofWorksheet or null if EOF. (Each routine that loads a
+     * statement will return the next token after the end of the statement's
+     * input text.)
+     * 
+     * @param nextToken the first token to be loaded.
+     * @param inputCursorPos offset plus one of Caret in Proof TextArea or -1 if
+     *            not available.
+     * @param stepRequestIn may be null, or StepSelector Search or Choice
+     *            request and will be loaded into the ProofWorksheet.
+     * @return String token starting the next ProofWorksheet or null.
+     * @throws IOException if an error occurred
+     * @throws MMIOError if an error occurred
+     * @throws ProofAsstException if an error occurred
      */
     public String loadWorksheet(String nextToken, final int inputCursorPos,
         final StepRequest stepRequestIn) throws IOException, MMIOError,
@@ -1411,9 +1323,9 @@ public class ProofWorksheet {
         // end of stmtLoop! oy.
 
         /*
-         *  =====================================================
-         *  <<<<<This is the loadWorksheet "finale" section.>>>>>
-         *  =====================================================
+         * =====================================================
+         * <<<<<This is the loadWorksheet "finale" section.>>>>>
+         * =====================================================
          */
 
         if (stepRequest != null
@@ -1443,9 +1355,8 @@ public class ProofWorksheet {
             updateComboFrameDjVars();
 
         /**
-         *   Verify correct number of hyp proof steps
-         *   entered for theorem, regard it as a
-         *   structural defect if the count is wrong!!!
+         * Verify correct number of hyp proof steps entered for theorem, regard
+         * it as a structural defect if the count is wrong!!!
          */
         if (!isNewTheorem() && theorem.getLogHypArrayLength() != hypStepCnt)
             throw new ProofAsstException(1, // line
@@ -1459,7 +1370,7 @@ public class ProofWorksheet {
                     + PaConstants.ERRMSG_THRM_NBR_HYPS_ERROR_4);
 
         /**
-         *  Compute level numbers for the proof steps.
+         * Compute level numbers for the proof steps.
          */
         loadWorksheetProofLevelNumbers();
 
@@ -1496,9 +1407,9 @@ public class ProofWorksheet {
     }
 
     /*
-     *  Modify each Hyp "pointers" to a step with a localRef
-     *  to the step the localRef is pointing to. And then
-     *  delete each localRef step from the ProofWorksheet.
+     * Modify each Hyp "pointers" to a step with a localRef
+     * to the step the localRef is pointing to. And then
+     * delete each localRef step from the ProofWorksheet.
      */
     private void makeLocalRefRevisionsToWorksheet(
         final List<DerivationStep> stepsWithLocalRefs)
@@ -1549,11 +1460,8 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Initial load of proof worksheet step level numbers.
-     *
-     *  Note: this assumes that each ProofStepStmt.proofLevel
-     *        is pre-initialized to zero.
-     *
+     * Initial load of proof worksheet step level numbers. Note: this assumes
+     * that each ProofStepStmt.proofLevel is pre-initialized to zero.
      */
     public void loadWorksheetProofLevelNumbers() {
 
@@ -1576,29 +1484,29 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Obtain output message text from ProofWorksheet.
-     *  <p>
-     *  Note: this is a key function used by ProofAsstGUI.
-     *  <p>
-     *  Note: with word wrap 'on', newlines are ignored in
-     *  JTextArea, so we insert spacer lines.
-     *
-     *  @return      Proof Error Message Text area as String.
+     * Obtain output message text from ProofWorksheet.
+     * <p>
+     * Note: this is a key function used by ProofAsstGUI.
+     * <p>
+     * Note: with word wrap 'on', newlines are ignored in JTextArea, so we
+     * insert spacer lines.
+     * 
+     * @return Proof Error Message Text area as String.
      */
     public String getOutputMessageText() {
         return ProofWorksheet.getOutputMessageText(messages);
     }
 
     /**
-     *  Obtain output message text from ProofWorksheet.
-     *  <p>
-     *  Note: this is a key function used by ProofAsstGUI.
-     *  <p>
-     *  Note: with word wrap 'on', newlines are ignored in
-     *  JTextArea, so we insert spacer lines.
-     *
-     *  @param  messages Messages object.
-     *  @return      Proof Error Message Text area as String.
+     * Obtain output message text from ProofWorksheet.
+     * <p>
+     * Note: this is a key function used by ProofAsstGUI.
+     * <p>
+     * Note: with word wrap 'on', newlines are ignored in JTextArea, so we
+     * insert spacer lines.
+     * 
+     * @param messages Messages object.
+     * @return Proof Error Message Text area as String.
      */
     public static String getOutputMessageText(final Messages messages) {
 
@@ -1632,14 +1540,14 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Obtain output proof text from ProofWorksheet.
-     *  <p>
-     *  Note: this is a key function used by ProofAsstGUI.
-     *  <p>
-     *  Note: with word wrap 'on', newlines are ignored in
-     *  JTextArea, so we insert spacer lines.
-     *
-     *  @return      Proof Text area as String.
+     * Obtain output proof text from ProofWorksheet.
+     * <p>
+     * Note: this is a key function used by ProofAsstGUI.
+     * <p>
+     * Note: with word wrap 'on', newlines are ignored in JTextArea, so we
+     * insert spacer lines.
+     * 
+     * @return Proof Text area as String.
      */
     public String getOutputProofText() {
         if (hasStructuralErrors())
@@ -1653,11 +1561,11 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Insert a GeneratedProofStmt into the ProofWorksheet
-     *  <p>
-     *  Note: this is used by ProofAsst after successful unification.
-     *
-     *  @param rpnProof Proof Stmt array.
+     * Insert a GeneratedProofStmt into the ProofWorksheet
+     * <p>
+     * Note: this is used by ProofAsst after successful unification.
+     * 
+     * @param rpnProof Proof Stmt array.
      */
     public void addGeneratedProofStmt(final RPNStep[] rpnProof) {
         final GeneratedProofStmt x = new GeneratedProofStmt(this, rpnProof);
@@ -1677,51 +1585,42 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Returns the GeneratedProofStmt from the ProofWorksheet
-     *  <p>
-     *  Note: returns null if unification unsuccessful or not
-     *        yet performed.
-     *
-     *  @return generatedProofStmt or null if not unified
-     *          successfully.
+     * Returns the GeneratedProofStmt from the ProofWorksheet
+     * <p>
+     * Note: returns null if unification unsuccessful or not yet performed.
+     * 
+     * @return generatedProofStmt or null if not unified successfully.
      */
     public GeneratedProofStmt getGeneratedProofStmt() {
         return generatedProofStmt;
     }
 
     /**
-     *  Returns the DistinctVariablesStmt array from the
-     *  ProofWorksheet.
-     *  <p>
-     *  Note: may return null.
-     *
-     *  @return DistinctVariablesStmt array or null if there
-     *          are none.
+     * Returns the DistinctVariablesStmt array from the ProofWorksheet.
+     * <p>
+     * Note: may return null.
+     * 
+     * @return DistinctVariablesStmt array or null if there are none.
      */
     public DistinctVariablesStmt[] getDvStmtArray() {
         return dvStmtArray;
     }
 
     /**
-     *  Generate DistinctVariablesStmt set for soft DjVars
-     *  errors.
-     *  <p>
-     *  Input is ProofWorksheet.proofSoftDjVarsErrorList and
-     *  ProofAsstPreferences, which determines whether
-     *  a full replacement set of DistinctVariableStmt's
-     *  must be created, or only the differences to what
-     *  is already on the theorem in the .mm database.
-     *  <p>
-     *  Note that the ProofWorksheet's dvStmtArray,
-     *  dvStmtCnt and comboFrame are updated -- even
-     *  though at this time there is no known use of
-     *  these data items after this point in the
-     *  processing (which is just prior to displaying
-     *  the fully-unified proof on the GUI screen). However,
-     *  there may be a use for the updated data items
-     *  in testing, and in any case it is best no to
-     *  leave loose ends dangling.
-     *  <p>
+     * Generate DistinctVariablesStmt set for soft DjVars errors.
+     * <p>
+     * Input is ProofWorksheet.proofSoftDjVarsErrorList and
+     * ProofAsstPreferences, which determines whether a full replacement set of
+     * DistinctVariableStmt's must be created, or only the differences to what
+     * is already on the theorem in the .mm database.
+     * <p>
+     * Note that the ProofWorksheet's dvStmtArray, dvStmtCnt and comboFrame are
+     * updated -- even though at this time there is no known use of these data
+     * items after this point in the processing (which is just prior to
+     * displaying the fully-unified proof on the GUI screen). However, there may
+     * be a use for the updated data items in testing, and in any case it is
+     * best no to leave loose ends dangling.
+     * <p>
      */
     public void generateAndAddDjVarsStmts() {
 
@@ -1789,23 +1688,15 @@ public class ProofWorksheet {
     }
 
     /**
-     *  Load the combo frame and var array object
-     *  for use throughout the ProofWorksheet.
-     *
-     *  For new theorems uses global ScopeDef from
-     *  logical system, pruned by eliminating MObj's
-     *  with seq >= maxSeq.
-     *
-     *  For existing theorems, merges MandFrame and OptFrame.
-     *
-     *  comboVarMap always built using MandFrame
-     *  for simplicity and reliability even though
-     *  it would, theoretically be possible to derive
-     *  it for new theorems using the ScopeDef
-     *  (curiously, MandFrame/OptFrame do not
-     *  directly store Var's -- probably because
-     *  each VarHyp *has* an associated Var and
-     *  it would be redundant.)
+     * Load the combo frame and var array object for use throughout the
+     * ProofWorksheet. For new theorems uses global ScopeDef from logical
+     * system, pruned by eliminating MObj's with seq >= maxSeq. For existing
+     * theorems, merges MandFrame and OptFrame. comboVarMap always built using
+     * MandFrame for simplicity and reliability even though it would,
+     * theoretically be possible to derive it for new theorems using the
+     * ScopeDef (curiously, MandFrame/OptFrame do not directly store Var's --
+     * probably because each VarHyp *has* an associated Var and it would be
+     * redundant.)
      */
     public void loadComboFrameAndVarMap() {
         if (isNewTheorem())
@@ -1844,7 +1735,7 @@ public class ProofWorksheet {
         }
 
         try {
-            final Integer stepInteger = new Integer(stepField);
+            final Integer stepInteger = Integer.valueOf(stepField);
             if (stepInteger <= 0)
                 triggerLoadStructureException(PaConstants.ERRMSG_STEP_LE_0_1
                     + getErrorLabelIfPossible()
@@ -1938,9 +1829,9 @@ public class ProofWorksheet {
         hypStepCnt = logHypArray.length;
 
         /*
-         *  No need to loadWorksheetStmtArrays here because this
-         *  worksheet is headed straight for output on the GUI,
-         *  not Unification.
+         * No need to loadWorksheetStmtArrays here because this
+         * worksheet is headed straight for output on the GUI,
+         * not Unification.
          */
         // loadWorksheetStmtArrays();
 
@@ -2008,9 +1899,9 @@ public class ProofWorksheet {
         qedStep = derivationStep; // final step...
 
         /*
-         *  No need to loadWorksheetStmtArrays here because this
-         *  worksheet is headed straight for output on the GUI,
-         *  not Unification.
+         * No need to loadWorksheetStmtArrays here because this
+         * worksheet is headed straight for output on the GUI,
+         * not Unification.
          */
         // loadWorksheetStmtArrays();
     }
@@ -2054,9 +1945,9 @@ public class ProofWorksheet {
         hypStepCnt = 1;
 
         /*
-         *  No need to loadWorksheetStmtArrays here because this
-         *  worksheet is headed straight for output on the GUI,
-         *  not Unification.
+         * No need to loadWorksheetStmtArrays here because this
+         * worksheet is headed straight for output on the GUI,
+         * not Unification.
          */
         // loadWorksheetStmtArrays();
 
